Improve structure and readability

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
 
 <script src="src/pixi/pixi.min.js"></script>
-<script src="src/script.js"></script>
+<script src="src/js/setup.js"></script>
+<script src="src/js/magic.js"></script>
+<script src="src/js/keyboard_handler.js"></script>
 </body>
 </html>
