Add walls drawing and Player class

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <script src="src/pixi/pixi.min.js"></script>
 <script src="src/js/setup.js"></script>
+<script src="src/js/player.js"></script>
 <script src="src/js/magic.js"></script>
 <script src="src/js/keyboard_handler.js"></script>
 </body>
