Fix rotation and add favicon

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="src/style.css">
+    <link rel="icon" href="src/images/favicon.ico">
     <title>Playable</title>
 </head>
 <body>
 
 <script src="src/pixi/pixi.min.js"></script>
+<script src="src/js/loader.js"></script>
 <script src="src/js/setup.js"></script>
 <script src="src/js/player.js"></script>
 <script src="src/js/magic.js"></script>
