--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
 
 <script src="src/pixi/pixi.min.js"></script>
-<script src="src/js/loader.js"></script>
-<script src="src/js/setup.js"></script>
-<script src="src/js/player.js"></script>
-<script src="src/js/magic.js"></script>
 <script src="src/js/keyboard_handler.js"></script>
+<script src="src/js/loader.js"></script>
+<script src="src/js/classes/tile_element.js"></script>
+<script src="src/js/classes/player.js"></script>
+<script src="src/js/magic.js"></script>
+<script src="src/js/setup.js"></script>
 </body>
 </html>
