Add roller enemies

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <script src="src/js/loader.js"></script>
 <script src="src/js/classes/tile_element.js"></script>
 <script src="src/js/classes/player.js"></script>
+<script src="src/js/classes/enemy.js"></script>
+<script src="src/js/classes/roller.js"></script>
 <script src="src/js/magic.js"></script>
 <script src="src/js/setup.js"></script>
 </body>
