Change turn delay system
Instead of prohibiting player from moving too fast enemies now just move twice if player moves twice before enemies turn start

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <script src="src/pixi/pixi.min.js"></script>
 <script src="src/js/keyboard_handler.js"></script>
+<script src="src/js/game_logic.js"></script>
+<script src="src/js/draw.js"></script>
 <script src="src/js/loader.js"></script>
 <script src="src/js/classes/game_state.js"></script>
 <script src="src/js/classes/tile_element.js"></script>
