--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <script src="src/js/loader.js"></script>
 <script src="src/js/classes/tile_element.js"></script>
 <script src="src/js/classes/player.js"></script>
-<script src="src/js/classes/enemy.js"></script>
-<script src="src/js/classes/roller.js"></script>
+<script src="src/js/classes/enemies/enemy.js"></script>
+<script src="src/js/classes/enemies/roller.js"></script>
 <script src="src/js/magic.js"></script>
 <script src="src/js/setup.js"></script>
 </body>
