Add red roller enemy

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 <script src="src/js/classes/player.js"></script>
 <script src="src/js/classes/enemies/enemy.js"></script>
 <script src="src/js/classes/enemies/roller.js"></script>
+<script src="src/js/classes/enemies/roller_b.js"></script>
+<script src="src/js/classes/enemies/star.js"></script>
+<script src="src/js/classes/enemies/star_b.js"></script>
 <script src="src/js/magic.js"></script>
 <script src="src/js/setup.js"></script>
 </body>
