Add shake animation

--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="src/style.css">
     <link rel="icon" href="src/images/favicon.ico">
     <title>Playable</title>
 </head>
+<style>
+    body {
+        padding: 0;
+        margin: 0;
+        overflow: hidden;
+    }
+</style>
 <body>
-
 <script src="src/pixi/pixi.min.js"></script>
 <script src="src/js/classes/game_state.js"></script>
 <script src="src/js/keyboard_handler.js"></script>
