--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <body>
 <script src="src/pixi/pixi.min.js"></script>
 <script src="src/js/classes/game_state.js"></script>
+<script src="src/js/utils.js"></script>
+<script src="src/js/rooms.js"></script>
 <script src="src/js/keyboard_handler.js"></script>
 <script src="src/js/game_logic.js"></script>
 <script src="src/js/draw.js"></script>
