Fix roller_b bug & attack animation wip

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <script src="src/js/classes/game_state.js"></script>
 <script src="src/js/utils.js"></script>
 <script src="src/js/rooms.js"></script>
+<script src="src/js/animations.js"></script>
+<script src="src/js/mapChecks.js"></script>
 <script src="src/js/keyboard_handler.js"></script>
 <script src="src/js/game_logic.js"></script>
 <script src="src/js/draw.js"></script>
