Generate level without paths

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <script src="src/js/classes/game_state.js"></script>
 <script src="src/js/utils.js"></script>
 <script src="src/js/rooms.js"></script>
+<script src="src/js/level_generation.js"></script>
 <script src="src/js/animations.js"></script>
 <script src="src/js/mapChecks.js"></script>
 <script src="src/js/keyboard_handler.js"></script>
