Probably improve resize variables?

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <script src="src/js/animations.js"></script>
 <script src="src/js/mapChecks.js"></script>
 <script src="src/js/keyboard_handler.js"></script>
+<script src="src/js/camera.js"></script>
 <script src="src/js/game_logic.js"></script>
 <script src="src/js/draw.js"></script>
 <script src="src/js/loader.js"></script>
