Magic tiles' size is now full tile

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <script src="src/js/draw.js"></script>
 <script src="src/js/loader.js"></script>
 <script src="src/js/classes/tile_element.js"></script>
+<script src="src/js/classes/full_tile_element.js"></script>
 <script src="src/js/classes/wallTile.js"></script>
 <script src="src/js/classes/voidTile.js"></script>
 <script src="src/js/classes/player.js"></script>
