Add templates for future enemies

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </style>
 <body>
 <script src="src/pixi/pixi.min.js"></script>
+<script src="src/js/enums.js"></script>
 <script src="src/js/classes/game_state.js"></script>
 <script src="src/js/utils.js"></script>
 <script src="src/js/rooms.js"></script>
@@ -36,6 +37,10 @@
 <script src="src/js/classes/enemies/roller_b.js"></script>
 <script src="src/js/classes/enemies/star.js"></script>
 <script src="src/js/classes/enemies/star_b.js"></script>
+<script src="src/js/classes/enemies/spider.js"></script>
+<script src="src/js/classes/enemies/spider_b.js"></script>
+<script src="src/js/classes/enemies/snail.js"></script>
+<script src="src/js/classes/enemies/snail_b.js"></script>
 <script src="src/js/magic.js"></script>
 <script src="src/js/setup.js"></script>
 </body>
