--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 <script src="src/js/loader.js"></script>
 <script src="src/js/classes/tile_element.js"></script>
 <script src="src/js/classes/full_tile_element.js"></script>
+<script src="src/js/classes/hazard.js"></script>
+<script src="src/js/classes/poison_hazard.js"></script>
 <script src="src/js/classes/wallTile.js"></script>
 <script src="src/js/classes/voidTile.js"></script>
 <script src="src/js/classes/player.js"></script>
