--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
 <script src="src/pixi/pixi.min.js"></script>
 <script src="src/js/enums.js"></script>
+<script src="src/js/math.js"></script>
 <script src="src/js/classes/game_state.js"></script>
 <script src="src/js/utils.js"></script>
 <script src="src/js/rooms.js"></script>
