--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 <script src="src/js/classes/wallTile.js"></script>
 <script src="src/js/classes/voidTile.js"></script>
 <script src="src/js/classes/player.js"></script>
+<script src="src/js/classes/tall_tile_element.js"></script>
+<script src="src/js/classes/statue.js"></script>
 <script src="src/js/classes/enemies/enemy.js"></script>
 <script src="src/js/classes/enemies/roller.js"></script>
 <script src="src/js/classes/enemies/roller_b.js"></script>
