Make weapons objects

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 </style>
 <body>
 <script src="src/pixi/pixi.min.js"></script>
+
 <script src="src/js/enums.js"></script>
 <script src="src/js/math.js"></script>
-<script src="src/js/classes/game_state.js"></script>
+<script src="src/js/game.js"></script>
 <script src="src/js/utils.js"></script>
 <script src="src/js/rooms.js"></script>
 <script src="src/js/astar.js"></script>
@@ -28,6 +29,7 @@
 <script src="src/js/game_logic.js"></script>
 <script src="src/js/draw.js"></script>
 <script src="src/js/loader.js"></script>
+
 <script src="src/js/classes/tile_element.js"></script>
 <script src="src/js/classes/full_tile_element.js"></script>
 <script src="src/js/classes/hazard.js"></script>
@@ -37,6 +39,7 @@
 <script src="src/js/classes/player.js"></script>
 <script src="src/js/classes/tall_tile_element.js"></script>
 <script src="src/js/classes/statue.js"></script>
+
 <script src="src/js/classes/enemies/enemy.js"></script>
 <script src="src/js/classes/enemies/roller.js"></script>
 <script src="src/js/classes/enemies/roller_b.js"></script>
@@ -46,6 +49,11 @@
 <script src="src/js/classes/enemies/spider_b.js"></script>
 <script src="src/js/classes/enemies/snail.js"></script>
 <script src="src/js/classes/enemies/snail_b.js"></script>
+
+<script src="src/js/classes/equipment/knife.js"></script>
+<script src="src/js/classes/equipment/ninja_knife.js"></script>
+<script src="src/js/classes/equipment/sword.js"></script>
+
 <script src="src/js/magic.js"></script>
 <script src="src/js/setup.js"></script>
 </body>
