Draw equipment on HUD

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 <script src="src/js/classes/equipment/knife.js"></script>
 <script src="src/js/classes/equipment/ninja_knife.js"></script>
 <script src="src/js/classes/equipment/sword.js"></script>
+<script src="src/js/classes/equipment/basic_armor.js"></script>
 
 <script src="src/js/magic.js"></script>
 <script src="src/js/setup.js"></script>
