Introduce AnimatedTileElement class

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <script src="src/js/loader.js"></script>
 
 <script src="src/js/classes/tile_element.js"></script>
+<script src="src/js/classes/animated_tile_element.js"></script>
 <script src="src/js/classes/full_tile_element.js"></script>
 <script src="src/js/classes/hazard.js"></script>
 <script src="src/js/classes/poison_hazard.js"></script>
