--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 <script src="src/js/classes/equipment/knife.js"></script>
 <script src="src/js/classes/equipment/ninja_knife.js"></script>
 <script src="src/js/classes/equipment/sword.js"></script>
+<script src="src/js/classes/equipment/bow.js"></script>
 <script src="src/js/classes/equipment/basic_armor.js"></script>
 
 <script src="src/js/magic.js"></script>
