Add magic classes

--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
 <script src="src/js/classes/equipment/bow.js"></script>
 <script src="src/js/classes/equipment/basic_armor.js"></script>
 
+<script src="src/js/classes/magic/aura.js"></script>
+<script src="src/js/classes/magic/fireball.js"></script>
+<script src="src/js/classes/magic/spikes.js"></script>
+<script src="src/js/classes/magic/teleport.js"></script>
+<script src="src/js/classes/magic/petrification.js"></script>
+<script src="src/js/classes/magic/necromancy.js"></script>
+
 <script src="src/js/magic.js"></script>
 <script src="src/js/setup.js"></script>
 </body>
