--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 <script src="src/js/classes/full_tile_element.js"></script>
 <script src="src/js/classes/hazard.js"></script>
 <script src="src/js/classes/poison_hazard.js"></script>
-<script src="src/js/classes/wallTile.js"></script>
-<script src="src/js/classes/voidTile.js"></script>
+<script src="src/js/classes/wall_tile.js"></script>
+<script src="src/js/classes/super_wall_tile.js"></script>
+<script src="src/js/classes/void_tile.js"></script>
 <script src="src/js/classes/player.js"></script>
 <script src="src/js/classes/tall_tile_element.js"></script>
 <script src="src/js/classes/statue.js"></script>
