Add chests interaction

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <script src="src/js/classes/player.js"></script>
 <script src="src/js/classes/tall_tile_element.js"></script>
 <script src="src/js/classes/statue.js"></script>
+<script src="src/js/classes/chest.js"></script>
 <script src="src/js/classes/obelisk.js"></script>
 <script src="src/js/classes/grail.js"></script>
 
