--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 <script src="src/js/classes/enemies/spider_b.js"></script>
 <script src="src/js/classes/enemies/snail.js"></script>
 <script src="src/js/classes/enemies/snail_b.js"></script>
+<script src="src/js/classes/enemies/eel.js"></script>
 
 <script src="src/js/classes/equipment/pickaxe.js"></script>
 <script src="src/js/classes/equipment/knife.js"></script>
