Add dark and poison eel and update room set

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 <script src="src/js/classes/enemies/snail.js"></script>
 <script src="src/js/classes/enemies/snail_b.js"></script>
 <script src="src/js/classes/enemies/eel.js"></script>
+<script src="src/js/classes/enemies/poison_eel.js"></script>
+<script src="src/js/classes/enemies/dark_eel.js"></script>
 
 <script src="src/js/classes/equipment/pickaxe.js"></script>
 <script src="src/js/classes/equipment/knife.js"></script>
