Successfully build app.js with rollup

--- a/index.html
+++ b/index.html
@@ -13,73 +13,6 @@
     }
 </style>
 <body>
-<script src="src/pixi/pixi.min.js"></script>
-
-<script src="src/js/enums.js"></script>
-<script src="src/js/math.js"></script>
-<script src="src/js/game.js"></script>
-<script src="src/js/utils.js"></script>
-<script src="src/js/rooms.js"></script>
-<script src="src/js/astar.js"></script>
-<script src="src/js/level_generation.js"></script>
-<script src="src/js/animations.js"></script>
-<script src="src/js/mapChecks.js"></script>
-<script src="src/js/keyboard_handler.js"></script>
-<script src="src/js/camera.js"></script>
-<script src="src/js/game_logic.js"></script>
-<script src="src/js/draw.js"></script>
-<script src="src/js/loader.js"></script>
-
-<script src="src/js/classes/tile_element.js"></script>
-<script src="src/js/classes/animated_tile_element.js"></script>
-<script src="src/js/classes/full_tile_element.js"></script>
-<script src="src/js/classes/hazard.js"></script>
-<script src="src/js/classes/poison_hazard.js"></script>
-<script src="src/js/classes/wall_tile.js"></script>
-<script src="src/js/classes/super_wall_tile.js"></script>
-<script src="src/js/classes/void_tile.js"></script>
-<script src="src/js/classes/player.js"></script>
-<script src="src/js/classes/tall_tile_element.js"></script>
-<script src="src/js/classes/statue.js"></script>
-<script src="src/js/classes/chest.js"></script>
-<script src="src/js/classes/obelisk.js"></script>
-<script src="src/js/classes/grail.js"></script>
-
-<script src="src/js/classes/enemies/enemy.js"></script>
-<script src="src/js/classes/enemies/roller.js"></script>
-<script src="src/js/classes/enemies/roller_b.js"></script>
-<script src="src/js/classes/enemies/star.js"></script>
-<script src="src/js/classes/enemies/star_b.js"></script>
-<script src="src/js/classes/enemies/spider.js"></script>
-<script src="src/js/classes/enemies/spider_b.js"></script>
-<script src="src/js/classes/enemies/snail.js"></script>
-<script src="src/js/classes/enemies/snail_b.js"></script>
-<script src="src/js/classes/enemies/eel.js"></script>
-<script src="src/js/classes/enemies/poison_eel.js"></script>
-<script src="src/js/classes/enemies/dark_eel.js"></script>
-
-<script src="src/js/classes/equipment/tools/pickaxe.js"></script>
-<script src="src/js/classes/equipment/weapons/knife.js"></script>
-<script src="src/js/classes/equipment/weapons/ninja_knife.js"></script>
-<script src="src/js/classes/equipment/weapons/sword.js"></script>
-<script src="src/js/classes/equipment/weapons/bow.js"></script>
-
-<script src="src/js/classes/equipment/armor/basic_armor.js"></script>
-<script src="src/js/classes/equipment/armor/wizard_robe.js"></script>
-
-<script src="src/js/classes/equipment/headwear/seer_circlet.js"></script>
-<script src="src/js/classes/equipment/headwear/wizard_hat.js"></script>
-
-<script src="src/js/classes/equipment/footwear/anti_hazard.js"></script>
-<script src="src/js/classes/equipment/footwear/damaging.js"></script>
-
-<script src="src/js/classes/magic/aura.js"></script>
-<script src="src/js/classes/magic/fireball.js"></script>
-<script src="src/js/classes/magic/spikes.js"></script>
-<script src="src/js/classes/magic/teleport.js"></script>
-<script src="src/js/classes/magic/petrification.js"></script>
-<script src="src/js/classes/magic/necromancy.js"></script>
-
-<script src="src/js/setup.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
