Change font to Roboto

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Playable</title>
 </head>
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
+
     body {
         padding: 0;
         margin: 0;
